Create getValue to practice function calls

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,14 @@
                 "-fcolor-diagnostics",
                 "-fansi-escape-codes",
                 "-g",
+                "-Wall",
+                "-Weffc++",
+                "-Wextra",
+                "-Wconversion",
+                "-Wsign-conversion",
+                "Werror",
+                "-pedantic-errors",
+                "-ggdb",
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
