Modify tasks.json to compile all files, fix header issue

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,10 +13,10 @@
                 "-Wextra",
                 "-Wconversion",
                 "-Wsign-conversion",
-                "Werror",
+                "-Werror",
                 "-pedantic-errors",
                 "-ggdb",
-                "${file}",
+                "${workspaceFolder}/*.cpp",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
